--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,23 +1,67 @@
 cmake_minimum_required(VERSION 3.10)
-project(SDL_Setup)
+project(PushdOut)
 
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-# Move the executable to /bin
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")
-# Find CMake modules in /cmake
-set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+## Compiler Flags
 
-find_package(SDL2 REQUIRED)
+if (MSVC)
+    # Force to always compile with W4
+    if(CMAKE_CXX_FLAGS MATCHES "/W[0-4]")
+        string(REGEX REPLACE "/W[0-4]" "/W4" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
+    else()
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
+    endif()
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /WX")
+else()
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic")
+endif()
 
-include_directories(${SDL2_INCLUDE_DIR})
+## Project Setup
 
-set (SDL_SETUP_SOURCES
-        src/main.cpp
-        src/SimpleWindow.cpp
-        src/SimpleWindow.h
-        )
+include_directories(engine)
+add_subdirectory(engine)
+add_subdirectory(game)
 
-add_executable(SDL_Setup ${SDL_SETUP_SOURCES})
-target_link_libraries(SDL_Setup ${SDL2_LIBRARY})
+target_include_directories(
+        engine PUBLIC
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+        $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
+)
+
+## Tests
+
+include_directories(${CMAKE_SOURCE_DIR}/external)
+add_subdirectory(tests)
+
+enable_testing()
+add_test(
+        NAME UnitTests COMMAND tests
+)
+
+## Clang Tidy
+
+if(ENABLE_CLANG_TIDY)
+    find_program(CLANG_TIDY_BIN clang-tidy-6.0)
+    find_program(RUN_CLANG_TIDY_BIN run-clang-tidy-6.0)
+
+    if(CLANG_TIDY_BIN STREQUAL "CLANG_TIDY_BIN-NOTFOUND")
+        message(FATAL_ERROR "unable to locate clang-tidy-6.0")
+    endif()
+
+    if(RUN_CLANG_TIDY_BIN STREQUAL "RUN_CLANG_TIDY_BIN-NOTFOUND")
+        message(FATAL_ERROR "unable to locate run-clang-tidy-6.0.py")
+    endif()
+
+    list(APPEND RUN_CLANG_TIDY_BIN_ARGS
+            -clang-tidy-binary ${CLANG_TIDY_BIN}
+            -checks=clan*,cert*,misc*,perf*,cppc*,read*,mode*,-cert-err58-cpp,-misc-noexcept-move-constructor
+            )
+
+    add_custom_target(
+            tidy
+            COMMAND ${RUN_CLANG_TIDY_BIN} ${RUN_CLANG_TIDY_BIN_ARGS}
+            COMMENT "running clang tidy"
+    )
+endif()
