Working base example with base-ECS system in place

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -3,12 +3,12 @@ find_package(SDL2 REQUIRED)
 include_directories(${SDL2_INCLUDE_DIR})
 
 set(ECS_SRC
+        ecs/Entity.h ecs/Entity.cpp
+        ecs/EntityManager.h ecs/EntityManager.cpp
+        ecs/Component.h ecs/Component.cpp
+        ecs/ComponentManager.h ecs/ComponentManager.cpp
+        ecs/World.h
         )
 
-set(GRAPHICS_SRC
-        )
-
-# more engine stuff
-
-add_library(engine ${ECS_SRC} ${GRAPHICS_SRC})
+add_library(engine ${ECS_SRC})
 target_link_libraries(engine ${SDL2_LIBRARY})
