--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -1,5 +1,6 @@
 set(GAME_SRC
-        )
+    main.cpp
+)
 
-add_executable(SDL_Game ${GAME_SRC})
-target_link_libraries(SDL_Game engine)
+add_executable(PushdOut ${GAME_SRC})
+target_link_libraries(PushdOut engine)
