Add Box2D to CMake

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -1,6 +1,11 @@
 set (CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
+set (CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/engine/external/Box2D")
+
 find_package(SDL2 REQUIRED)
+find_package(BOX2D REQUIRED)
+
 include_directories(${SDL2_INCLUDE_DIR})
+include_directories(${BOX2D_INCLUDE_DIR})
 
 set(ECS_SRC
         )
@@ -8,7 +13,12 @@ set(ECS_SRC
 set(GRAPHICS_SRC
         )
 
+set(PHYSICS_SRC
+        physics/PhysicsManager.h
+        physics/PhysicsManager.cpp
+        )
+
 # more engine stuff
 
-add_library(engine ${ECS_SRC} ${GRAPHICS_SRC})
-target_link_libraries(engine ${SDL2_LIBRARY})
+add_library(engine ${ECS_SRC} ${GRAPHICS_SRC} ${PHYSICS_SRC})
+target_link_libraries(engine ${SDL2_LIBRARY} ${BOX2D_LIBRARY})
