Feature/window startup (#5)
* Add basics for windows

* Add SDLWindow to build, fill in class implementation (does not compile)

* Move window classes to engine/window folder and create window on game startup

* Fix sdl not being built as library, causing it to hijack main

* Fix window creation on startup

* Change 'default' to 'coord' and don't use reference for WindowProperties

* Place window related classes in engine namespace
Remove public: from struct as it's implicitly public

* Remove unused parameters from main
Move WindowProperties to base construcor instead of copying

* Zero-initialize WindowProperties to prevent undefined behaviour

* add basic game loop with stubbed event manager so the SDL window does not freeze

* Add virtual destructor for abstract EventManager, explicitly convert SDL_PollEvent return value to boolean value

* Call SDL_Quit before exiting, make sdl window resizable, set x y and width and height so window is not 0x0 when no longer maximized

* Fix title of window (lowercase out)

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -1,5 +1,5 @@
 set (CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
-
+set (SDL2_BUILDING_LIBRARY)
 find_package(SDL2 REQUIRED)
 find_package(Box2D REQUIRED)
 
@@ -22,6 +22,19 @@ set(PHYSICS_SRC
         physics/PhysicsManager.cpp
         )
 
+set(EVENTS_SRC
+		events/EventManager.h
+		events/SDLEventManager.h
+		events/SDLEventManager.cpp
+		)
+
+set(WINDOW_SRC
+		window/SDLWindow.h
+		window/SDLWindow.cpp
+		window/Window.h
+		window/WindowProperties.h
+		)
+
 # more engine stuff
-add_library(engine ${ECS_SRC} ${GRAPHICS_SRC} ${PHYSICS_SRC})
+add_library(engine ${ECS_SRC} ${GRAPHICS_SRC} ${PHYSICS_SRC} ${WINDOW_SRC} ${EVENTS_SRC})
 target_link_libraries(engine ${SDL2_LIBRARY} ${BOX2D_LIBRARY})
