Add domainclasses for level. start JSON conversion

--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -1,5 +1,9 @@
 set(GAME_SRC
-    main.cpp)
+    main.cpp level/spawnPoint.h
+        level/level.h
+        level/tile.h
+        level/themes.h
+        level/levelReader/levelReader.h level/levelReader/levelReader.cpp level/platformKind.h)
 
 add_executable(PushdOut ${GAME_SRC})
 target_link_libraries(PushdOut engine)
