--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ addons:
       - clang-format-6.0
       - clang-tidy-6.0
       - libsdl2-dev
+      - libsdl2-ttf-dev
+      - libsdl2-image-dev
       - libbox2d-dev
 
 python:
