Create facade physics (#10)
* Add Box2D as external dependency.

Also link it up to the engine.

* Fix imports

* Make 'game' compilable and runnable, with a dummy program

* Add CI support

* Add Box2D as external dependency.

Also link it up to the engine.

* Fix imports

* Make 'game' compilable and runnable, with a dummy program

* Add CI support

* Rebase to develop

* Remove remnant Box2D config from CMakeList

* Add 'remove' functionality to the managers

* Make game demo that uses current ECS implementation

* Add world and theme

* Remove friction from world, should be on platforms

* Save bodies to world object

* Move to namespace engine

* Add world and theme

* Remove friction from world, should be on platforms

* Save bodies to world object

* Move to namespace engine

* Add System and SystemManager

* Move game to 'demo/ecs' branch

* Add Box2D as external dependency.

Also link it up to the engine.

* Make 'game' compilable and runnable, with a dummy program

* Add CI support

* Make 'game' compilable and runnable, with a dummy program

* Add CI support

* Rebase to develop

* Add 'remove' functionality to the managers

* Make game demo that uses current ECS implementation

* Add System and SystemManager

* Move game to 'demo/ecs' branch

* Fix clang-format style issues

* Remove unused SDL imports in game

* Draw bodies

* Make body abstract

* Move Vector2D to another namespace

* Move everything into physics namespace

* Render correct width and height

* Add friction

* Make IRenderer with SDL implementation. Make RenderVisitor with SDL implementation

* Create a 60fps game loop

* Rename variables

* Add moon theme

* Add friction from theme

* Remove unused function

* Remove override destructor

* Add apply force

* Include chrono

* Fix errors

* Run Clang-Tidy

* Run Clang-Tidy

* Run Clang-Tidy

* Run Clang-Tidy

* Process feedb

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -11,6 +11,10 @@ include_directories(${SDL2_TTF_INCLUDE_DIRS})
 include_directories(${SDL2_IMAGE_INCLUDE_DIRS})
 include_directories(${BOX2D_INCLUDE_DIR})
 
+set(COMMON_SRC
+        common/Vector2D.h
+        )
+
 set(ECS_SRC
     ecs/Entity.h
     ecs/Entity.cpp
@@ -47,9 +51,17 @@ set(GRAPHICS_SRC
 )
 
 set(PHYSICS_SRC
-    physics/PhysicsManager.h
-    physics/PhysicsManager.cpp
-)
+        physics/PhysicsManager.h
+        physics/PhysicsManager.cpp
+        physics/World.h
+        physics/World.cpp
+        physics/Body.h
+        physics/DynamicBody.cpp
+        physics/DynamicBody.h
+        physics/StaticBody.h
+        physics/StaticBody.cpp
+        physics/Body.cpp
+        )
 
 set(EVENTS_SRC
     events/EventManager.h
