--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -1,16 +1,49 @@
 set(GAME_SRC
-        main.cpp
-        )
+    main.cpp
+)
+
+set(COMPONENT_SRC
+    components/MoveComponent.h
+    components/PlayerInputComponent.h
+    components/JumpComponent.h
+    components/PositionComponent.h
+    components/BodyComponent.h
+    components/DimensionComponent.h
+    components/SpriteComponent.h
+)
+
+set(SYSTEM_SRC
+    systems/MoveSystem.cpp
+    systems/MoveSystem.h
+    systems/PlayerInputSystem.cpp
+    systems/PlayerInputSystem.h
+    systems/JumpSystem.cpp
+    systems/JumpSystem.h
+    systems/PositionSystem.cpp
+    systems/PositionSystem.h
+    systems/BodySystem.cpp
+    systems/BodySystem.h
+    systems/DimensionSystem.cpp
+    systems/DimensionSystem.h
+    systems/SpriteSystem.cpp
+    systems/SpriteSystem.h
+)
+
+set(DEFINITION_SRC
+    definitions/Action.h
+    definitions/Body.h
+)
 
 set(THEMES_SRC
-        themes/Earth.h
-        themes/Moon.h
-        themes/Theme.h
-        themes/Theme.cpp
-        )
+    themes/Earth.h
+    themes/Moon.h
+    themes/Theme.h
+    themes/Theme.cpp
+)
 
 #more engine stuff
-add_executable(PushdOut ${GAME_SRC} ${THEMES_SRC})
+add_executable(PushdOut ${GAME_SRC} ${COMPONENT_SRC} ${SYSTEM_SRC} ${DEFINITION_SRC} ${THEMES_SRC})
+
 target_link_libraries(PushdOut engine)
 
 #Copy asset folder to bin folder
