--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -1,5 +1,5 @@
 set(GAME_SRC
-    main.cpp)
+    main.cpp InputObserver.cpp InputObserver.h)
 
 add_executable(PushdOut ${GAME_SRC})
 target_link_libraries(PushdOut engine)
