[WIP] Feature/ui framework (#9)
* First version of UI framework (not complete)

* Adds proper layout handling of components and panels

* Move common/Vector2D.h to own section in engine/CMakeLists

* Change processKeyEvent to processInputEvent so it can also handle clicks and controllers in the future

* Remove test UI from main.cpp

* Fix include not found

* Remove UI includes from main.cpp

* Move executing button action to processInputEvent

* Fix format of UI framework files, set SpaceBeforeCpp11BracedList to false to fix formatting on windows with LLVM

* Revert .clang-format to simply be based on WebKit

* Fix remainin clang-tidy errors

* Remove redundant initialization

* Make LayoutAnchor enum class

* Add basic drawing of buttons and labels, create common TextComponent to avoid duplication for button/label, add menu demo

* Disable centering of stackpanel children, set correct window size for UI system

* Use Vector2D in graphics namespace

* Fix position&size order in RectangleShape

* Add support for navigating through UI components

* Fix ComponentManagerNotFoundException still in CMakeLists.txt, change rectangleshape constructor call so it uses vectors

* Fix Clang-Tidy errors and left over debug-code

* Remove to-do as it's already fixed

* Show menu

* Move state implementation to engine

* Go to GameState after 5 seconds

* Fix merge issues

* Use forward slashes in path

* Include memory header for shared_ptr in IGame.h

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -13,6 +13,7 @@ include_directories(${BOX2D_INCLUDE_DIR})
 
 set(ENGINE_GAME_SRC
         game/IGame.h
+        game/IGame.cpp
         game/State.h
         )
 
@@ -86,16 +87,48 @@ set(DEFINITION_SRC
         )
 
 set(EXCEPTION_SRC
-)
+        )
+
+
+set(UI_SRC
+        ui/Frame.cpp
+        ui/Frame.h
+        ui/UISystem.cpp
+        ui/UISystem.h
+        ui/components/Component.h
+        ui/DrawContext.h
+        ui/components/Button.cpp
+        ui/components/Button.h
+        ui/components/IAction.h
+        ui/components/OpenFrameAction.cpp
+        ui/components/OpenFrameAction.h
+        ui/components/Label.cpp
+        ui/components/Label.h
+        ui/components/FlowDirection.h
+        ui/components/LayoutAnchor.h
+        ui/components/WrappedComponent.h
+        ui/components/ComponentSize.h
+        ui/components/ComponentSizeType.h
+        ui/components/StackPanel.cpp
+        ui/components/StackPanel.h
+        ui/components/LayoutPanel.cpp
+        ui/components/LayoutPanel.h
+        ui/components/ComponentSize.cpp
+        ui/UIRenderer.h
+        ui/components/TextComponent.h
+        ui/components/TextComponent.cpp ui/components/ComponentPanel.h
+        )
 
 # more engine stuff
 add_library(engine
         ${ENGINE_GAME_SRC}
         ${ECS_SRC}
         ${GRAPHICS_SRC}
+        ${COMMON_SRC}
         ${PHYSICS_SRC}
         ${WINDOW_SRC}
         ${EVENTS_SRC}
         ${EXCEPTION_SRC}
+        ${UI_SRC}
         ${DEFINITION_SRC})
 target_link_libraries(engine ${SDL2_LIBRARY} ${SDL2_TTF_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} ${BOX2D_LIBRARY})
