Load level and display (#29)
* WIP #1

* Render bodies loaded from game state

* Draw bodies at correct position with some funky colours 🕺🏻

* Use RenderSystem to render the level

* Replace BodySystem with PositionSystem

* Remove unused DimensionSystem

* bRiNg BaCk fUnKY cOLoUrS 🕺🏻

--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -31,12 +31,10 @@ set(SYSTEM_SRC
         systems/JumpSystem.h
         systems/PositionSystem.cpp
         systems/PositionSystem.h
-        systems/BodySystem.cpp
-        systems/BodySystem.h
-        systems/DimensionSystem.cpp
-        systems/DimensionSystem.h
         systems/SpriteSystem.cpp
         systems/SpriteSystem.h
+        systems/RenderSystem.cpp
+        systems/RenderSystem.h
         )
 
 set(DEFINITION_SRC
