--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -1,5 +1,5 @@
-set (CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
-set (SDL2_BUILDING_LIBRARY)
+set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
+set(SDL2_BUILDING_LIBRARY)
 find_package(SDL2 REQUIRED)
 find_package(Box2D REQUIRED)
 
@@ -7,43 +7,51 @@ include_directories(${SDL2_INCLUDE_DIR})
 include_directories(${BOX2D_INCLUDE_DIR})
 
 set(ECS_SRC
-    ecs/Entity.h ecs/Entity.cpp
-    ecs/EntityManager.h ecs/EntityManager.cpp
-    ecs/Component.h ecs/Component.cpp
-    ecs/ComponentManager.h ecs/ComponentManager.cpp
-    ecs/World.h
-)
+        ecs/Entity.h ecs/Entity.cpp
+        ecs/EntityManager.h ecs/EntityManager.cpp
+        ecs/Component.h ecs/Component.cpp
+        ecs/ComponentManager.h ecs/ComponentManager.cpp
+        ecs/World.h
+        )
 
 set(GRAPHICS_SRC
-)
+        )
 
 set(PHYSICS_SRC
-    physics/PhysicsManager.h
-    physics/PhysicsManager.cpp
-)
+        physics/PhysicsManager.h
+        physics/PhysicsManager.cpp
+        )
 
 set(INPUT_SRC
-		InputHandeling/InputManager.cpp InputHandeling/InputManager.h)
+        InputHandeling/InputManager.cpp
+        InputHandeling/InputManager.h
+        InputHandeling/Keys.h
+        InputHandeling/IObserver.h
+        )
 
 set(EVENTS_SRC
-
-		SDLAdapters/SDLEventAdapter.cpp
-		SDLAdapters/SDLEventAdapter.h
-		EventHandling/EventManager.cpp
-		EventHandling/EventManager.h
-		EventHandling/Events/QuitEvent.cpp
-		EventHandling/Events/QuitEvent.h
-		EventHandling/Events/UnknownEvent.cpp
-		EventHandling/Events/UnknownEvent.h
-		EventHandling/Events/IEvent.h
-		EventHandling/Events/KeyEvent.cpp EventHandling/Events/KeyEvent.h)
+        SDLAdapters/SDLKeyMap.cpp SDLAdapters/SDLKeyMap.h
+        SDLAdapters/SDLEventAdapter.cpp
+        SDLAdapters/SDLEventAdapter.h
+        EventHandling/EventManager.cpp
+        EventHandling/EventManager.h
+        EventHandling/Events/IControlEvent.h
+        EventHandling/Events/IOtherEvent.h
+        EventHandling/Events/QuitEvent.cpp
+        EventHandling/Events/QuitEvent.h
+        EventHandling/Events/UnknownEvent.cpp
+        EventHandling/Events/UnknownEvent.h
+        EventHandling/Events/IEvent.h
+        EventHandling/Events/KeyEvent.cpp
+        EventHandling/Events/KeyEvent.h
+        )
 
 set(WINDOW_SRC
-		window/SDLWindow.h
-		window/SDLWindow.cpp
-		window/Window.h
-		window/WindowProperties.h
-        EventHandling/Events/IControlEvent.h EventHandling/Events/IOtherEvent.h SDLAdapters/SDLKeyMap.cpp SDLAdapters/SDLKeyMap.h InputHandeling/IObserver.h)
+        window/SDLWindow.h
+        window/SDLWindow.cpp
+        window/Window.h
+        window/WindowProperties.h
+        )
 
 # more engine stuff
 add_library(engine ${ECS_SRC} ${GRAPHICS_SRC} ${PHYSICS_SRC} ${WINDOW_SRC} ${EVENTS_SRC} ${INPUT_SRC})
