Feature/camera projection (#32)
* Implement basic camera that moves to the side

* Fix CMakeLists.txt formatting

* Move Camera to engine

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -54,6 +54,8 @@ set(GRAPHICS_SRC
         graphics/drawable/Sprite.cpp
         graphics/drawable/Sprite.h
         graphics/Color.h
+        graphics/Camera.h
+        graphics/Camera.cpp
         )
 
 set(PHYSICS_SRC
