Calculate text size for buttons and labels and center children in stackpanel against cross axis (#30)

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -116,9 +116,9 @@ set(UI_SRC
         ui/components/LayoutPanel.cpp
         ui/components/LayoutPanel.h
         ui/components/ComponentSize.cpp
-        ui/UIRenderer.h
         ui/components/TextComponent.h
-        ui/components/TextComponent.cpp ui/components/ComponentPanel.h
+        ui/components/TextComponent.cpp
+        ui/components/ComponentPanel.h
         )
 
 # more engine stuff
