Implement pickup of EquipableComponent entities, use slots in inventory instead of a vector

--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -53,8 +53,12 @@ set(THEMES_SRC
         themes/Theme.cpp
         )
 
+set(EQUIPEMENT_SRC
+        equipment/InventorySlot.h
+        )
+
 #more engine stuff
-add_executable(PushdOut ${GAME_SRC} ${COMPONENT_SRC} ${SYSTEM_SRC} ${DEFINITION_SRC} ${THEMES_SRC})
+add_executable(PushdOut ${GAME_SRC} ${COMPONENT_SRC} ${SYSTEM_SRC} ${DEFINITION_SRC} ${THEMES_SRC} ${EQUIPMENT_SRC})
 
 target_link_libraries(PushdOut engine)
 
