--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ addons:
       - libsdl2-dev
       - libsdl2-ttf-dev
       - libsdl2-image-dev
+      - libsdl2-mixer-dev
       - libbox2d-dev
 
 python:
