Handle controller input
controller input is saved, but not correctly

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -96,7 +96,7 @@ set(EVENTS_SRC
         events/models/KeyDownEvent.h
         events/models/QuitEvent.h
         events/models/Subscription.h
-        )
+        events/models/ControllerEvent.h events/models/UnknownEvent.h)
 
 set(WINDOW_SRC
         window/SDLWindow.h
