Feature/ui input (#37)
* Implement UI framework input processing and allow states to pause/resume/close, add option to quit game, allow going back to main menu

* Move UNKNOWN value to top of Keys enum, store reference when retrieving from game states stack

* Fix crash when not unsubscribing input subscription manually, now uses weak_ptr to automatically close subscriptions

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -82,7 +82,8 @@ set(INPUT_SRC
         input/SDLKeys.h
         input/KeyMap.cpp
         input/KeyMap.h
-        input/KeyStates.h)
+        input/KeyStates.h
+        )
 
 set(EVENTS_SRC
         events/IEventHandler.h
@@ -153,6 +154,7 @@ set(UI_SRC
         ui/components/TextComponent.h
         ui/components/TextComponent.cpp
         ui/components/ComponentPanel.h
+        ui/components/CustomAction.h
         )
 
 # more engine stuff
