Feature/force gun (#41)
* Add button for using weapon

* Fire projectile to the right

* Set projectile to use KinematicBody

* Remove print lines

* Remove blank line

* Check if weapon type ahs a fire function

* refactor setLinearVelocity return type to void

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -72,7 +72,10 @@ set(PHYSICS_SRC
         physics/StaticBody.h
         physics/StaticBody.cpp
         physics/Body.cpp
-        physics/Collision.cpp physics/Collision.h)
+        physics/Collision.cpp
+        physics/Collision.h
+        physics/KinematicBody.cpp
+        physics/KinematicBody.h)
 
 set(INPUT_SRC
         input/InputManager.h
