Spawn character at spawn point (#45)
* Spawn character at spawn point

* Fix Clang-Tidy fix

* Create multiple players and spawn them on different spawn points

--- a/game/CMakeLists.txt
+++ b/game/CMakeLists.txt
@@ -10,6 +10,8 @@ set(GAME_SRC
         states/GameState.h
         states/MainMenuState.cpp
         states/MainMenuState.h
+        exceptions/NoPlayersFoundException.h
+        exceptions/MissingCharacterSpawnException.h
         )
 
 set(COMPONENT_SRC
