Feature/spawn equipment (#49)
* fix wrong starting position for physics bodies

* Create EquipmentSpawnerComponent to represent spawners, adjust levelreader to create spawners instead of directly creating equipment

* Reduce size of Equipment spawners

* Add spawner and jump pad sprite, fix test formatting

* Create equipment factory and use it to spawn random equipment on equipment spawners

* Add basic addition with value to vector

* Fix out of bounds when getting random equipment type, spawn equipment at a small offset, use a duration instead of a timepoint to avoid counting when paused

* Fix the spawner spawning items when the equipment hasn't even been picked up yet

* Fix crash when an item is picked up and weapon system checks it

* Accidentally removed subscription

* Fix weapons being able to fire after pausing for a while, remove duration from item as this is better handled by each specific item implementation

* Use auto when casting

* Add method to change physics world gravity

* Implement reverse gravity item, pick up items properly, fix force guns spawning without cooldown

* Name unused parameters (clang-tidy sucks)

* Add sounds to reverse gravity item

* Add reverse-gravity sprite (not yet used)

* Fix equipment spawn bug

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -78,7 +78,8 @@ set(PHYSICS_SRC
         physics/Collision.cpp
         physics/Collision.h
         physics/KinematicBody.cpp
-        physics/KinematicBody.h)
+        physics/KinematicBody.h
+        )
 
 set(INPUT_SRC
         input/InputManager.h
